--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "project-fu",
   "version": "1.0.0",
   "private": true,
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,5 +12,8 @@
   "devDependencies": {
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "firebase": "^11.7.1"
   }
 }
